--- a/config/default.yaml
+++ b/config/default.yaml
@@ -11,6 +11,7 @@ metacontroller: 'multiagent'
 total_timesteps: 5000000
 multithreading: False
 use_gpu: False
+advantage_alignment: True
 
 # Learning params
 batch_size: 256
