--- a/config/domain/exp_default_1.yaml
+++ b/config/domain/exp_default_1.yaml
@@ -8,7 +8,7 @@ market_performance_baseline: 1.1
 market_performance_variance: 0
 allow_resilience_investment: False
 allow_greenwash_investment: False
-company_esg_score_observable: True
+company_esg_score_observable: False
 action_capping: 0.05
 max_steps: 100
 company_attributes:
@@ -30,11 +30,11 @@ company_attributes:
 
 investor_attributes:
  - capital: 16.7
-   esg_preference: 10
+   esg_preference: 0
  - capital: 16.7
-   esg_preference: 10
+   esg_preference: 0
  - capital: 16.7
-   esg_preference: 10
+   esg_preference: 0
 
 agent_policies:
  - mode: "PPO"
