--- a/config/domain/exp_default_1.yaml
+++ b/config/domain/exp_default_1.yaml
@@ -13,6 +13,8 @@ zero_climate_events: False
 action_capping: 0.05
 max_steps: 100
 climate_sensitivity: 1
+lambda_scaling: 70
+
 company_attributes:
  - capital: 10
    climate_risk_exposure: 0.07
@@ -32,11 +34,11 @@ company_attributes:
 
 investor_attributes:
  - capital: 16.7
-   esg_preference: 0
+   esg_preference: 10
  - capital: 16.7
-   esg_preference: 0
+   esg_preference: 10
  - capital: 16.7
-   esg_preference: 0
+   esg_preference: 10
 
 agent_policies:
  - mode: "PPO"
